feat(#147): extend CLI docs generator + document sf modules/skill/feedback/uninstall
Extended scripts/generate-cli-docs.ts to cover the 4 CLI commands added
since the last generator run: sf modules, sf skill, sf feedback, sf uninstall.
Also enriched sf new, sf update, sf workflow entries with accurate options,
examples, and notes so the generated pages match the real CLI surface.

Generator escapes `|` inside table cells to avoid breaking VitePress/Vue
parsing when flags or descriptions contain alternation (e.g.
`<open|closed|all>`, `<cli|scaffold>`).

Rewired /cli/ sidebar in docs/.vitepress/config.mts to list all 8 commands
in user-discovery order: new → update → modules → skill → feedback → tools
→ workflow → uninstall.

Remaining dead links (/workflow/*) resolve in the next commit of this SUB.